--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -28,7 +28,8 @@
 
   <div class="field">
     <%= f.label :due_date %>
-    <%= f.date_select :due_date %>
+    <!-- %= f.date_select :due_date % -->
+    <%= f.text_field :due_date, :id => "datepicker" %>
   </div>
 
   <div class="field">
