Added to and reordered seed data; added active scope for commission types; request only displays active commission types; added model details to the README

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= f.label :commission_type_id, "Commission type*" %>
-    <%= f.collection_select :commission_type_id, CommissionType.order(:name), :id, :name_how_long, {:selected => @request.commission_type_id,:prompt => 'Please select', :class => "required_field"} %><br /
+    <%= f.collection_select :commission_type_id, CommissionType.active().order(:name), :id, :name_how_long, {:selected => @request.commission_type_id,:prompt => 'Please select', :class => "required_field"} %><br /
   </div>
 
   <div class="field">
