Basic set of working model and controller tests; removed surplus data from seeds; database error handling

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,4 +1,12 @@
-<p id="notice"><%= notice %></p>
+<p id="#notice"><%= notice %></p>
+<% if alert -%>
+<div id="#error_explanation" style="color: #ff0000">
+<h2>An error occurred</h2>
+<ul>
+<li><%= alert %></li>
+</ul>
+</div>
+<% end -%>
 
 <h1>Requests</h1>
 
