Added coffeescript to support autoselect of commission type from request in commissions; added request and commissiom_type methods to commission; commented out template error page

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -18,7 +18,6 @@
       <th>Contact address</th>
       <th>Commission type</th>
       <th>Due date</th>
-      <th>Comments</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -29,9 +28,8 @@
         <td><%= request.title %></td>
         <td><%= request.fullname %></td>
         <td><%= request.contact_address %></td>
-        <td><%= request.commission_type_id %></td>
+        <td><%= request.commission_type.name %></td>
         <td><%= request.due_date.to_s(:my_date) %></td>
-        <td><%= request.comments %></td>
         <td><%= link_to 'Show', request %></td>
         <td><%= link_to 'Edit', edit_request_path(request) %></td>
         <td><%= link_to 'Destroy', request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
