--- a/app/views/requests/show.html.erb
+++ b/app/views/requests/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Commission type:</strong>
-  <%= CommissionType.find_by_id(@request.commission_type_id).name %>
+  <%= @request.commission_type.name %>
 </p>
 
 <p>
